// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectIntegrations Renders emptystate with access 1`] = `
<ProjectIntegrations
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <Panel>
    <Component
      className="css-10qfvek-Panel e1laxa7d0"
    >
      <div
        className="css-10qfvek-Panel e1laxa7d0"
      >
        <PanelHeader
          disablePadding={true}
          hasButtons={true}
        >
          <Component
            className="css-30ccsi-PanelHeader-getPadding e1p8v8nv0"
            disablePadding={true}
            hasButtons={true}
          >
            <Flex
              align="center"
              className="css-30ccsi-PanelHeader-getPadding e1p8v8nv0"
              justify="space-between"
            >
              <Base
                align="center"
                className="e1p8v8nv0 css-1uiswd5-PanelHeader-getPadding"
                justify="space-between"
              >
                <div
                  className="e1p8v8nv0 css-1uiswd5-PanelHeader-getPadding"
                  is={null}
                >
                  <Box
                    flex="1"
                    px={2}
                  >
                    <Base
                      className="css-pcjga5"
                      flex="1"
                      px={2}
                    >
                      <div
                        className="css-pcjga5"
                        is={null}
                      >
                        Project Integrations
                      </div>
                    </Base>
                  </Box>
                  <Box
                    pr={1}
                  >
                    <Base
                      className="css-ioegso"
                      pr={1}
                    >
                      <div
                        className="css-ioegso"
                        is={null}
                      >
                        <FeatureContainer
                          access={
                            Array [
                              "org:integrations",
                            ]
                          }
                        >
                          <Feature
                            access={
                              Array [
                                "org:integrations",
                              ]
                            }
                            configFeatures={Array []}
                            configUser={
                              Object {
                                "email": "foo@example.com",
                                "flags": Object {
                                  "newsletter_consent_prompt": false,
                                },
                                "hasPasswordAuth": true,
                                "id": "1",
                                "isAuthenticated": true,
                                "name": "Foo Bar",
                                "options": Object {
                                  "timezone": "UTC",
                                },
                                "permissions": Set {},
                                "username": "foo@example.com",
                              }
                            }
                            organization={
                              Object {
                                "access": Array [
                                  "org:read",
                                  "org:write",
                                  "org:admin",
                                  "project:read",
                                  "project:write",
                                  "project:admin",
                                  "team:read",
                                  "team:write",
                                  "team:admin",
                                  "org:integrations",
                                ],
                                "features": Array [],
                                "id": "3",
                                "name": "Organization Name",
                                "onboardingTasks": Array [],
                                "projects": Array [],
                                "scrapeJavaScript": true,
                                "slug": "org-slug",
                                "status": Object {
                                  "id": "active",
                                  "name": "active",
                                },
                                "teams": Array [],
                              }
                            }
                            project={
                              Object {
                                "hasAccess": true,
                                "id": "2",
                                "isBookmarked": false,
                                "isMember": true,
                                "name": "Project Name",
                                "slug": "project-slug",
                                "teams": Array [],
                              }
                            }
                          >
                            <Tooltip
                              disabled={true}
                              title="You don't have permission to manage organization integrations"
                            >
                              <span>
                                <Button
                                  disabled={false}
                                  size="xsmall"
                                  to="/settings/org-slug/integrations/"
                                >
                                  <StyledButton
                                    aria-label="Manage Integrations"
                                    disabled={false}
                                    onClick={[Function]}
                                    role="button"
                                    size="xsmall"
                                    to="/settings/org-slug/integrations/"
                                  >
                                    <Component
                                      aria-label="Manage Integrations"
                                      className="css-dkprmi-StyledButton-getColors e17811v30"
                                      disabled={false}
                                      onClick={[Function]}
                                      role="button"
                                      size="xsmall"
                                      to="/settings/org-slug/integrations/"
                                    >
                                      <Link
                                        aria-label="Manage Integrations"
                                        className="css-dkprmi-StyledButton-getColors e17811v30"
                                        disabled={false}
                                        onClick={[Function]}
                                        onlyActiveOnIndex={false}
                                        role="button"
                                        size="xsmall"
                                        style={Object {}}
                                        to="/settings/org-slug/integrations/"
                                      >
                                        <a
                                          aria-label="Manage Integrations"
                                          className="css-dkprmi-StyledButton-getColors e17811v30"
                                          disabled={false}
                                          onClick={[Function]}
                                          role="button"
                                          size="xsmall"
                                          style={Object {}}
                                        >
                                          <ButtonLabel
                                            size="xsmall"
                                          >
                                            <Component
                                              className="css-6q5v1w-ButtonLabel e17811v31"
                                              size="xsmall"
                                            >
                                              <Flex
                                                align="center"
                                                className="css-6q5v1w-ButtonLabel e17811v31"
                                                size="xsmall"
                                              >
                                                <Base
                                                  align="center"
                                                  className="e17811v31 css-dqr4rq-ButtonLabel"
                                                  size="xsmall"
                                                >
                                                  <div
                                                    className="e17811v31 css-dqr4rq-ButtonLabel"
                                                    is={null}
                                                    size="xsmall"
                                                  >
                                                    Manage Integrations
                                                  </div>
                                                </Base>
                                              </Flex>
                                            </Component>
                                          </ButtonLabel>
                                        </a>
                                      </Link>
                                    </Component>
                                  </StyledButton>
                                </Button>
                              </span>
                            </Tooltip>
                          </Feature>
                        </FeatureContainer>
                      </div>
                    </Base>
                  </Box>
                </div>
              </Base>
            </Flex>
          </Component>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className="css-9vq8an-textStyles"
          >
            <EmptyMessage
              description={
                <FeatureContainer
                  access={
                    Array [
                      "org:integrations",
                    ]
                  }
                >
                  [Function]
                </FeatureContainer>
              }
              size="large"
              title="No Integrations Enabled"
            >
              <Wrapper
                size="large"
              >
                <div
                  className="css-1ykemxy-Wrapper eh488yo0"
                  size="large"
                >
                  <div
                    className="ref-message"
                  >
                    <EmptyHeader>
                      <div
                        className="css-y01aqt-EmptyHeader eh488yo3"
                      >
                        No Integrations Enabled
                      </div>
                    </EmptyHeader>
                    <EmptyDescription
                      noMargin={true}
                    >
                      <Component
                        className="css-1szwf0j-TextBlock-EmptyDescription eh488yo4"
                        noMargin={true}
                      >
                        <div
                          className="css-1szwf0j-TextBlock-EmptyDescription eh488yo4"
                        >
                          <FeatureContainer
                            access={
                              Array [
                                "org:integrations",
                              ]
                            }
                          >
                            <Feature
                              access={
                                Array [
                                  "org:integrations",
                                ]
                              }
                              configFeatures={Array []}
                              configUser={
                                Object {
                                  "email": "foo@example.com",
                                  "flags": Object {
                                    "newsletter_consent_prompt": false,
                                  },
                                  "hasPasswordAuth": true,
                                  "id": "1",
                                  "isAuthenticated": true,
                                  "name": "Foo Bar",
                                  "options": Object {
                                    "timezone": "UTC",
                                  },
                                  "permissions": Set {},
                                  "username": "foo@example.com",
                                }
                              }
                              organization={
                                Object {
                                  "access": Array [
                                    "org:read",
                                    "org:write",
                                    "org:admin",
                                    "project:read",
                                    "project:write",
                                    "project:admin",
                                    "team:read",
                                    "team:write",
                                    "team:admin",
                                    "org:integrations",
                                  ],
                                  "features": Array [],
                                  "id": "3",
                                  "name": "Organization Name",
                                  "onboardingTasks": Array [],
                                  "projects": Array [],
                                  "scrapeJavaScript": true,
                                  "slug": "org-slug",
                                  "status": Object {
                                    "id": "active",
                                    "name": "active",
                                  },
                                  "teams": Array [],
                                }
                              }
                              project={
                                Object {
                                  "hasAccess": true,
                                  "id": "2",
                                  "isBookmarked": false,
                                  "isMember": true,
                                  "name": "Project Name",
                                  "slug": "project-slug",
                                  "teams": Array [],
                                }
                              }
                            >
                              <span
                                key="6"
                              >
                                <span
                                  key="1"
                                >
                                  Project Integrations can be enabled here for this project. Currently no organization integrations are enabled with project-specific integration capabilities.
                                </span>
                                <span
                                  key="2"
                                >
                                   Visit the 
                                </span>
                                <Link
                                  key="3"
                                  to="/settings/org-slug/integrations"
                                >
                                  <Link
                                    onlyActiveOnIndex={false}
                                    style={Object {}}
                                    to="/settings/org-slug/integrations"
                                  >
                                    <a
                                      onClick={[Function]}
                                      style={Object {}}
                                    >
                                      Organization Integration Settings
                                    </a>
                                  </Link>
                                </Link>
                                <span
                                  key="4"
                                >
                                   to configure integrations.
                                </span>
                              </span>
                            </Feature>
                          </FeatureContainer>
                        </div>
                      </Component>
                    </EmptyDescription>
                  </div>
                </div>
              </Wrapper>
            </EmptyMessage>
          </div>
        </PanelBody>
      </div>
    </Component>
  </Panel>
</ProjectIntegrations>
`;

exports[`ProjectIntegrations Renders emptystate with no permissions 1`] = `
<ProjectIntegrations
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <Panel>
    <Component
      className="css-10qfvek-Panel e1laxa7d0"
    >
      <div
        className="css-10qfvek-Panel e1laxa7d0"
      >
        <PanelHeader
          disablePadding={true}
          hasButtons={true}
        >
          <Component
            className="css-30ccsi-PanelHeader-getPadding e1p8v8nv0"
            disablePadding={true}
            hasButtons={true}
          >
            <Flex
              align="center"
              className="css-30ccsi-PanelHeader-getPadding e1p8v8nv0"
              justify="space-between"
            >
              <Base
                align="center"
                className="e1p8v8nv0 css-1uiswd5-PanelHeader-getPadding"
                justify="space-between"
              >
                <div
                  className="e1p8v8nv0 css-1uiswd5-PanelHeader-getPadding"
                  is={null}
                >
                  <Box
                    flex="1"
                    px={2}
                  >
                    <Base
                      className="css-pcjga5"
                      flex="1"
                      px={2}
                    >
                      <div
                        className="css-pcjga5"
                        is={null}
                      >
                        Project Integrations
                      </div>
                    </Base>
                  </Box>
                  <Box
                    pr={1}
                  >
                    <Base
                      className="css-ioegso"
                      pr={1}
                    >
                      <div
                        className="css-ioegso"
                        is={null}
                      >
                        <FeatureContainer
                          access={
                            Array [
                              "org:integrations",
                            ]
                          }
                        >
                          <Feature
                            access={
                              Array [
                                "org:integrations",
                              ]
                            }
                            configFeatures={Array []}
                            configUser={
                              Object {
                                "email": "foo@example.com",
                                "flags": Object {
                                  "newsletter_consent_prompt": false,
                                },
                                "hasPasswordAuth": true,
                                "id": "1",
                                "isAuthenticated": true,
                                "name": "Foo Bar",
                                "options": Object {
                                  "timezone": "UTC",
                                },
                                "permissions": Set {},
                                "username": "foo@example.com",
                              }
                            }
                            organization={
                              Object {
                                "access": Array [
                                  "org:read",
                                  "org:write",
                                  "org:admin",
                                  "project:read",
                                  "project:write",
                                  "project:admin",
                                  "team:read",
                                  "team:write",
                                  "team:admin",
                                ],
                                "features": Array [],
                                "id": "3",
                                "name": "Organization Name",
                                "onboardingTasks": Array [],
                                "projects": Array [],
                                "scrapeJavaScript": true,
                                "slug": "org-slug",
                                "status": Object {
                                  "id": "active",
                                  "name": "active",
                                },
                                "teams": Array [],
                              }
                            }
                            project={
                              Object {
                                "hasAccess": true,
                                "id": "2",
                                "isBookmarked": false,
                                "isMember": true,
                                "name": "Project Name",
                                "slug": "project-slug",
                                "teams": Array [],
                              }
                            }
                          >
                            <Tooltip
                              disabled={false}
                              title="You don't have permission to manage organization integrations"
                            >
                              <span
                                className="tip"
                                title="You don't have permission to manage organization integrations"
                              >
                                <Button
                                  disabled={true}
                                  size="xsmall"
                                  to="/settings/org-slug/integrations/"
                                >
                                  <StyledButton
                                    aria-label="Manage Integrations"
                                    disabled={true}
                                    href={null}
                                    onClick={[Function]}
                                    role="button"
                                    size="xsmall"
                                    to={null}
                                  >
                                    <Component
                                      aria-label="Manage Integrations"
                                      className="css-1rcxqx1-StyledButton-getColors e17811v30"
                                      disabled={true}
                                      href={null}
                                      onClick={[Function]}
                                      role="button"
                                      size="xsmall"
                                      to={null}
                                    >
                                      <button
                                        aria-label="Manage Integrations"
                                        className="css-1rcxqx1-StyledButton-getColors e17811v30"
                                        disabled={true}
                                        href={null}
                                        onClick={[Function]}
                                        role="button"
                                        size="xsmall"
                                        to={null}
                                      >
                                        <ButtonLabel
                                          size="xsmall"
                                        >
                                          <Component
                                            className="css-6q5v1w-ButtonLabel e17811v31"
                                            size="xsmall"
                                          >
                                            <Flex
                                              align="center"
                                              className="css-6q5v1w-ButtonLabel e17811v31"
                                              size="xsmall"
                                            >
                                              <Base
                                                align="center"
                                                className="e17811v31 css-dqr4rq-ButtonLabel"
                                                size="xsmall"
                                              >
                                                <div
                                                  className="e17811v31 css-dqr4rq-ButtonLabel"
                                                  is={null}
                                                  size="xsmall"
                                                >
                                                  Manage Integrations
                                                </div>
                                              </Base>
                                            </Flex>
                                          </Component>
                                        </ButtonLabel>
                                      </button>
                                    </Component>
                                  </StyledButton>
                                </Button>
                              </span>
                            </Tooltip>
                          </Feature>
                        </FeatureContainer>
                      </div>
                    </Base>
                  </Box>
                </div>
              </Base>
            </Flex>
          </Component>
        </PanelHeader>
        <PanelBody
          direction="column"
          disablePadding={true}
          flex={false}
        >
          <div
            className="css-9vq8an-textStyles"
          >
            <EmptyMessage
              description={
                <FeatureContainer
                  access={
                    Array [
                      "org:integrations",
                    ]
                  }
                >
                  [Function]
                </FeatureContainer>
              }
              size="large"
              title="No Integrations Enabled"
            >
              <Wrapper
                size="large"
              >
                <div
                  className="css-1ykemxy-Wrapper eh488yo0"
                  size="large"
                >
                  <div
                    className="ref-message"
                  >
                    <EmptyHeader>
                      <div
                        className="css-y01aqt-EmptyHeader eh488yo3"
                      >
                        No Integrations Enabled
                      </div>
                    </EmptyHeader>
                    <EmptyDescription
                      noMargin={true}
                    >
                      <Component
                        className="css-1szwf0j-TextBlock-EmptyDescription eh488yo4"
                        noMargin={true}
                      >
                        <div
                          className="css-1szwf0j-TextBlock-EmptyDescription eh488yo4"
                        >
                          <FeatureContainer
                            access={
                              Array [
                                "org:integrations",
                              ]
                            }
                          >
                            <Feature
                              access={
                                Array [
                                  "org:integrations",
                                ]
                              }
                              configFeatures={Array []}
                              configUser={
                                Object {
                                  "email": "foo@example.com",
                                  "flags": Object {
                                    "newsletter_consent_prompt": false,
                                  },
                                  "hasPasswordAuth": true,
                                  "id": "1",
                                  "isAuthenticated": true,
                                  "name": "Foo Bar",
                                  "options": Object {
                                    "timezone": "UTC",
                                  },
                                  "permissions": Set {},
                                  "username": "foo@example.com",
                                }
                              }
                              organization={
                                Object {
                                  "access": Array [
                                    "org:read",
                                    "org:write",
                                    "org:admin",
                                    "project:read",
                                    "project:write",
                                    "project:admin",
                                    "team:read",
                                    "team:write",
                                    "team:admin",
                                  ],
                                  "features": Array [],
                                  "id": "3",
                                  "name": "Organization Name",
                                  "onboardingTasks": Array [],
                                  "projects": Array [],
                                  "scrapeJavaScript": true,
                                  "slug": "org-slug",
                                  "status": Object {
                                    "id": "active",
                                    "name": "active",
                                  },
                                  "teams": Array [],
                                }
                              }
                              project={
                                Object {
                                  "hasAccess": true,
                                  "id": "2",
                                  "isBookmarked": false,
                                  "isMember": true,
                                  "name": "Project Name",
                                  "slug": "project-slug",
                                  "teams": Array [],
                                }
                              }
                            >
                              Project Integrations can be enabled here for this project. Currently no organization integrations are enabled with project-specific integration capabilities.
                            </Feature>
                          </FeatureContainer>
                        </div>
                      </Component>
                    </EmptyDescription>
                  </div>
                </div>
              </Wrapper>
            </EmptyMessage>
          </div>
        </PanelBody>
      </div>
    </Component>
  </Panel>
</ProjectIntegrations>
`;
